[gd_scene load_steps=2 format=3 uid="uid://c6hh7fssjmxt4"]

[ext_resource type="Script" path="res://Scenes/temp/AssetManager.gd" id="1"]

[node name="LoggerNode" type="Node"]
script = ExtResource("1")

[node name="HTTPLogger" type="HTTPRequest" parent="."]

[node name="HTTPScoreLogger" type="HTTPRequest" parent="."]

[connection signal="request_completed" from="HTTPLogger" to="." method="_on_HTTPLogger_request_completed"]
[connection signal="request_completed" from="HTTPScoreLogger" to="." method="_on_HTTPScoreLogger_request_completed"]
